<resources>
    <string name="app_name">OnlineShop</string>
    <string name="home">Home</string>
    <string name="all_products">All Products</string>
    <string name="message">Message</string>
    <string name="categories">Categories</string>
    <string name="beauty_health"><![CDATA[Beauty & Health]]></string>
    <string name="babys_toys"><![CDATA[Babys & Toys]]></string>
    <string name="groceries_amp_pets"><![CDATA[Groceries & Pets]]></string>
    <string name="computer_amp_networking"><![CDATA[Computer & Networking]]></string>
    <string name="watches_accessories"><![CDATA[Watches & Accessories]]></string>
    <string name="automotive_motorbike"><![CDATA[Automotive & Motorbike]]></string>
    <string name="stylish_cotton_panjabi_for_men">Stylish Cotton Panjabi for Men</string>
    <string name="smack_fashion_bd">Smack Fashion BD</string>
    <string name="color">Color:</string>
    <string name="black">Black</string>
    <string name="minus">-</string>
    <string name="_one">1</string>
    <string name="plus">+</string>
    <string name="size">Size:</string>
    <string name="_44">44</string>
    <string name="bdt">BDT</string>
    <string name="_289">289</string>
    <string name="_650">650</string>
    <string name="proimg">proimg</string>
    <string name="check_out">Check Out</string>
    <string name="_369">369</string>
    <string name="total">Total:</string>
    <string name="_80">80</string>
    <string name="delivery_charge">Delivery Charge:</string>
    <string name="all">All</string>
    <string name="setting">Settings</string>
    <string name="my_cart">My Cart:</string>
    <string name="delete">Delete</string>
    <string name="_1">1</string>
    <string name="title_activity_men">MenActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="icon">icon</string>
    <string name="stylish_exclusive_semi_long_panjabi">Stylish Exclusive semi long Panjabi</string>
    <string name="tk">৳</string>
    <string name="_56">-56%</string>
    <string name="address_book">Address Book</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="track_your_order">Track Order</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="brand">Brand:</string>
    <string name="main_material">Main Material:</string>
    <string name="description">Description:</string>
    <string name="product_semi_long_panjabi_fabric_peyaj_cotton_fabric_pattern_solid_color_fit_slim_fit_length_semi_long_double_pocket_with_flap_decorative_button_enzymed_washed_100_qc_passed_bangladeshi_product">Product: Semi long panjabi, Fabric: Peyaj Cotton, Fabric Pattern: Solid Color, Fit: Slim Fit, Length: Semi long, Double pocket with flap, Decorative button, Enzymed washed, 100% QC passed, Bangladeshi product</string>
    <string name="wholesale_shop_online">Wholesale shop online</string>
    <string name="cotton">Cotton</string>
    <string name="cotton_high_quality_and_stylish_panjabi_for_men">Cotton high quality and stylish panjabi for men</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_now">ORDER Now</string>
    <string name="_0">0</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="electronics_devices">Electronics Devices</string>
    <string name="electronics_accessories">Electronics Accessories</string>
    <string name="office_equipment">Office Equipment</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="product_code">Product code:</string>
    <string name="ax776gdd54s">AX776GDD54S</string>
    <string name="quantity">Quantity:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="account_information">Account Information</string>
    <string name="logout">Logout</string>
    <string name="username">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="browse_photo">Browse Photo</string>
    <string name="update">Update</string>
    <string name="don_t_be_the_one_who_missed_out">Don\'t be the one who missed out</string>
    <string name="yesterday">Yesterday</string>
    <string name="buy_stylish_semi_long_cotton_panjabi_for_men_in_your_cart_before_we_run_out_of_stock">Buy stylish semi long cotton panjabi for men in your cart before we run out of stock!</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_you_have_any_account">Don\'t you have any account?</string>
    <string name="bag">Bag</string>
</resources>