<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/productimage"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:padding="5dp"
            android:contentDescription="@string/proimg"
            android:src="@drawable/panjabi" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/producttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stylish_cotton_panjabi_for_men"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shopname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smack_fashion_bd" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size" />
            <TextView
                android:id="@+id/productsize"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_44" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />
                <TextView
                    android:id="@+id/productcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/black" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tk" />
            <TextView
                android:id="@+id/presentprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_289"
                android:layout_marginStart="3dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tk" />
            <TextView
                android:id="@+id/previousprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_650"
                android:layout_marginStart="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_56"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="85dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decreaseInteger"
            android:text="@string/minus" />

        <androidx.cardview.widget.CardView
            android:id="@+id/integer_number"
            android:layout_width="40dp"
            app:cardElevation="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#CACACA"
                android:text="@string/_1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="increaseInteger"
            android:textColor="#000000"
            android:text="@string/plus" />
    </LinearLayout>

</androidx.cardview.widget.CardView>