<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/panjabi"
                android:contentDescription="@string/icon"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/stylish_cotton_panjabi_for_men"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/product_code"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/productcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ax776gdd54s"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/quantity"/>

                    <TextView
                        android:id="@+id/pquantity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/_1"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="155dp"
                    android:text="@string/cancel_order"/>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>