<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="5dp">

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/productpic"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/panjabi"/>

        <TextView
            android:id="@+id/productname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/stylish_exclusive_semi_long_panjabi"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/size" />
            <TextView
                android:id="@+id/productsize"
                android:layout_marginStart="3dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_44" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/productcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textSize="12sp"
                    android:text="@string/black" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tk" />
                <TextView
                    android:id="@+id/presentprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_289"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="3dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tk"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/previousprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_650"
                    android:textSize="12sp"
                    android:layout_marginStart="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_56"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>