<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="5dp">

    <LinearLayout
        style="@style/verticallayout"
        android:padding="5dp">
        <TextView
            android:id="@+id/msgtitle"
            android:text="@string/don_t_be_the_one_who_missed_out"
            style="@style/messagetitle" />

        <TextView
            android:id="@+id/msgtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#EAE7E7"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/msgimage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="8dp"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/msgdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/buy_stylish_semi_long_cotton_panjabi_for_men_in_your_cart_before_we_run_out_of_stock"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>